# picologging

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  SUPPORT.md  pyproject.toml  pytest.ini  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: hypothesis.yaml  pages.yml  quality.yml  test.yml  wheel.yml
benchmarks/: bench_handlers.py  bench_logger.py  suite.py
docs/: limitations.md
docs/source/: conf.py  django.rst  examples.rst  handlers.rst  index.rst  limitations.rst  logging.rst
picologging/: __init__.py  formatstyle.cxx  formatstyle.h  formatter.cxx  formatter.h  logrecord.cxx  logrecord.h
slowtests/: test_logrecordhyp.py
src/picologging/: __init__.py  __init__.pyi  _picologging.cxx  aio.py  compat.hxx  config.py  config.pyi  filehandler.cxx  filehandler.hxx  filepathcache.cxx  filepathcache.hxx  filterer.cxx  filterer.hxx  formatstyle.cxx  formatstyle.hxx  formatter.cxx  formatter.h  formatter.hxx  handler.cxx  handler.hxx  handlers.py  handlers.pyi  logger.cxx  logger.hxx  logrecord.cxx  logrecord.h  logrecord.hxx  picologging.hxx  queuehandler.cxx  queuehandler.hxx  streamhandler.cxx  streamhandler.hxx
tests/: test_exceptions.py  test_filehandler.py  test_formatter.py  test_handler.py  test_installer.py  test_logger.py  test_logrecord.py  test_percentstyle.py
tests/fuzzing/: README.md  fuzz_atheris.py
tests/hypothesis/: test_logrecordhyp.py
tests/integration/: requirements.txt  test_coloredlogs.py
tests/memray/: .gitignore  Makefile  README.md  format_exception.py  memray_format_exception.py  memray_litestar.py  memray_logger.py  memray_logrecord.py  memray_logrecord_cls.py  memray_queuehandler.py  memray_style.py  profile.py  requirements-asgitest.txt
tests/profile/: profile.py
tests/unit/: __init__.py  test_aio.py  test_buffering_handler.py  test_bufferinghandler.py  test_config.py  test_filehandler.py  test_formatter.py  test_gold.py  test_handler.py  test_logger.py  test_logrecord.py  test_percentstyle.py  test_picologging.py  test_queue_listener.py  test_queuehandler.py  test_queuehandlerstuff.py  test_sockethandler.py  test_starlite_queue_handler_setup.py  test_streamhandler.py  test_strformatstyle.py  test_threading.py  utils.py
