[build-system]
requires = [
    "setuptools>=65.4.1",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# skip musl and pypy
skip = ["*-musllinux*", "pp*"] 
test-requires = "pytest pytest-memray>=1.5.0"
test-command = "python -X dev -m pytest {project}/tests"
test-skip = ["*-win_arm64", "*-macosx_universal2:arm64"]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
archs = ["x86_64", "universal2"]

[tool.cibuildwheel.linux]
archs = ["i686", "x86_64", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["x86", "AMD64", "ARM64"]

[tool.pylint.messages_control]
disable = "C0114,C0115,C0116"

[tool.isort]
profile = "black"
